tests/error/L-in-name.tst
12
#rooms
r1 0 0
Lr2 0 1
r3 0 2
##start
s 1 1
##end
e 2 2
#links
e-s
r1-s
r1-e
r1-Lr2
r1-r3
Lr2-r3
r3-e
